--- a/css/kina.css
+++ b/css/kina.css
@@ -73,7 +73,7 @@ h2.widetext { margin-top: 12px; }
     left: 0;
     bottom: 0;
     position: fixed;
-    opacity: 0.75;
+    opacity: 0.85;
     border-top: 1px solid #000;
 }
 .cookiesrow a {
@@ -292,7 +292,7 @@ li {
     background-repeat: no-repeat;
     background-size: 100%;
     background-image: url('../images/gotostartbutton.png');
-    opacity: 0.3;
+    opacity: 0.4;
 }
 .gotostartbutton:hover {
     opacity: 1;
@@ -352,14 +352,15 @@ body .instagram-element .instagram-photo:hover img {
 .instagram-element .instagram-photo { width: 33.33%; margin: 0; }*/
 
 /* 3 Spalten, kleiner Abstand */
-.instagram-element { margin: 0.4% -0.4%; padding-top: 2%; }
-.instagram-element .instagram-photo { width: 32.5%; margin: 0.416%; }
+.instagram-element { margin: -0.5%; padding-top: 2%; }
+.instagram-element .instagram-photo { width: 32.3%; margin: 0.5%; }
 
-@media (max-width: 1400px) {
-    .instagram-element { margin: 0.4%; }
-    .instagram-element .instagram-photo { width: 32.5%; margin: 0.416%; }
+@media (max-width: 1680px) {
+    .instagram-element { margin: 0; }
+    .instagram-element .instagram-photo { width: 33.332%; margin: -0.01%; }
 }
-@media (max-width: 900px) {
+
+@media (max-width: 860px) {
     .instagram-element { margin: 0.8%; }
     .instagram-element .instagram-photo { width: 48.4%; margin: 0.8%; }
 }
@@ -367,6 +368,9 @@ body .instagram-element .instagram-photo:hover img {
     .instagram-element { margin: 1.2%; padding-top: 3%; }
     .instagram-element .instagram-photo { width: 97.6%; margin: 1.2%; }
 }
+
+
+
 
 @media (max-width: 980px) {
 
