--- a/css/kina.css
+++ b/css/kina.css
@@ -148,11 +148,20 @@ h2.widetext { margin-top: 12px; }
 
 img.logo {
     width: 100%;
-    min-width: 160px;
-    max-width: 160px;
-    margin-top: 70px;
-    margin-bottom: 25px;
+    min-width: 150px;
+    max-width: 150px;
+    margin-top: 50px;
+    margin-bottom: 5px;
 }
+
+img.menulogo {
+    width: 100%;
+    min-width: 50px;
+    max-width: 50px;
+    margin-top: 0px;
+    margin-bottom: px;
+}
+
 img.img-block {
     width: 100%;
     max-width: 600px;
@@ -507,9 +516,9 @@ body .instagram-element .instagram-photo:hover img {
 { color:#aeaeae; font-size: 12px; font-weight: 300; margin-bottom:3px; text-transform:none; }
 
 /* CUSTOM SLIDER STUFF */
-.slider-wrapper { position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1200px; height: 600px; overflow: hidden; visibility: hidden; }
+.slider-wrapper { position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1200px; height: 800px; overflow: hidden; visibility: hidden; }
 .slider-wrapper { margin-bottom: -1px; } /* hide the gap between slider and border of headline */
 /* .slider-wrapper { margin-bottom: 12px; } */
-.slider-slides { cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 600px; overflow: hidden; }
+.slider-slides { cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 800px; overflow: hidden; }
 
 
