--- a/css/kina-black.css
+++ b/css/kina-black.css
@@ -122,7 +122,7 @@ h2.widetext { margin-top: 12px; }
     vertical-align: middle;
     white-space: nowrap;
     text-decoration: none;
-    margin: 20px;
+    margin: 30px;
     border: white solid 1px;
 }
 .blackbutton:hover {
@@ -290,14 +290,19 @@ li {
 
 .socialbutton {
     width: 30%;
-    max-width: 100px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    max-width: 50px;
+    margin-top: 10px;
 }
 
 .contacts {
     max-width: 420px;
     margin: auto;
+}
+.contacts a {
+    color: white;
+}
+.contacts a:hover {
+    text-decoration: underline;
 }
 .contacts h4 {
     margin-top:0px;
