--- a/css/kina-black.css
+++ b/css/kina-black.css
@@ -185,6 +185,7 @@ img.menulogo {
     margin-bottom: -11px;
     margin-right: 50px;
     margin-left: 100px;
+    margin-left: 9%;
 }
 
 img.img-block {
