--- a/css/kina-black.css
+++ b/css/kina-black.css
@@ -84,6 +84,7 @@ h2.widetext { margin-top: 12px; }
 
 .cookiesrow a {
     color: #505050; text-decoration: underline;
+    font-size: 14px;
 }
 
 .saletext {
