--- a/css/kina-black.css
+++ b/css/kina-black.css
@@ -77,9 +77,16 @@ h2.widetext { margin-top: 12px; }
     right: 0;
     bottom: 0;
     position: fixed;
-    padding: 6px;
-    border: 1px solid black;
-    margin: 4px;
+    padding: 15px 5px;
+    border: 5px solid grey;
+    margin: 8px;
+}
+
+.cookiesrow .informedAboutCookies {
+    margin: 10px;
+    padding: 6px 12px;
+    font-size: 10px;
+    display: inline;
 }
 
 
