--- a/css/kina-black.css
+++ b/css/kina-black.css
@@ -84,7 +84,7 @@ h2.widetext { margin-top: 12px; }
 
 .cookiesrow .informedAboutCookies {
     margin: 10px;
-    padding: 6px 12px;
+    padding: 7px 12px 6px 12px;
     font-size: 10px;
     display: inline;
 }
