--- a/css/kinastudio2.css
+++ b/css/kinastudio2.css
@@ -178,20 +178,30 @@ h2.widetext { margin-top: 12px; }
 
 img.logo {
     width: 100%;
-    min-width: 240px;
-    max-width: 240px;
-    margin-top: 60px;
-    margin-bottom: 15px;
+    min-width: 320px;
+    max-width: 320px;
+    margin-top: 0px;
+    margin-bottom: -10px;
 }
 
 img.menulogo {
     min-width: 240px;
     max-width: 240px;
     margin-top: 0px;
-    margin-bottom: -6px;
     margin-right: 50px;
     margin-left: 100px;
     margin-left: 4%;
+    margin-bottom: -6px;
+}
+
+.logotext {
+    display: block;
+    font-size: 10px;
+    letter-spacing: 5px;
+    color: #ccc;
+    font-family: Lato, Helvetica, sans-serif;
+    font-weight: 300;
+    margin: 15px 0px 5px 0px;
 }
 
 img.img-block {
@@ -200,15 +210,15 @@ img.img-block {
     min-width: 320px;
 }
 
-.mainnav-wrapper { border-bottom: 1px solid #dfdfdf; }
+.mainnav-wrapper { border-bottom: 1px solid #f0f0f0; }
 
 .mainnav {
-    text-align: left;
+    /* text-align: left; */
     margin-top: 0px;
     display: block;
 	padding: 20px;
     background-color: black;
-    opacity: 0.95;
+    padding-top: 24px;
 }
 
 .mainnav a {
@@ -252,7 +262,6 @@ img.img-block {
     text-align: center;
     margin: 0px;
     margin-top: -2px;
-    opacity: 0.96;
     z-index: 999;
 }
 
@@ -442,8 +451,6 @@ body .instagram-element .instagram-photo:hover img {
     h3 { font-size: 18px; }
     h4 { font-size: 17px; }
 
-    .mainnav-wrapper { border-bottom: 1px solid #dfdfdf; }
-
 	.mainnav { 
         margin-top: 0px; /* FONT ISSUE compensation */
         padding: 0;
@@ -476,11 +483,11 @@ body .instagram-element .instagram-photo:hover img {
 }
 
 /* Fix because logo is too long */     
-@media (max-width: 700px) {
+@media (max-width: 500px) {
     img.logo {
         min-width: 210px;
         max-width: 210px;
-        margin-left: 52px;
+        margin-left: 55px;
     }
 }
 
