--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -268,7 +268,7 @@ img.img-block {
 .mobilemenuicon {
 	position: absolute;
     left: 10px;
-    top: 28px;
+    top: 27px;
     font-size: 12px;
     color: white;
 }
@@ -477,9 +477,9 @@ body .instagram-element .instagram-photo:hover img {
     }
 
     .logotext {
-        font-size: 8px;
+        font-size: 9px;
         margin: 6px 0px 0px 0px;
-}
+    }
 
     .stickytop { padding: 0px; margin-top: 0; }
     .welcomerow { display: none; }
@@ -494,7 +494,10 @@ body .instagram-element .instagram-photo:hover img {
         max-width: 210px;
         margin-left: 55px;
     }
-    .logotext { margin-left: 55px; }
+    .logotext {
+        font-size: 8px;
+        margin-left: 55px;
+    }
 }
 
 
