--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -6,8 +6,7 @@
 p, a, h1, h2, h3, h4 {
     font-family: "lato", sans-serif;
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Reem Kufi', sans-serif;
-    font-weight: 300;
+    font-weight: 200;
     color: white;
     letter-spacing: .1em;
     -webkit-font-smoothing: subpixel-antialiased;
@@ -25,14 +24,22 @@ h4 {
 
 p, a {
     color: white;
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 13px;
+    line-height: 19px;
     letter-spacing: .8px;
     margin: 0;
 }
 
 p { text-align: center; }
-p.info { max-width: 760px; margin: auto; text-align: justify }
+
+p.info { 
+    font-size: 12px;
+    line-height: 16px;
+    font-family: Arial,Helvetica,sans-serif; 
+    max-width: 760px; 
+    margin: auto; 
+    text-align: left;
+}
 
 a {
     text-decoration: none;
@@ -75,8 +82,8 @@ h2.widetext { margin-top: 12px; }
     box-sizing: border-box;
     font-weight: 300;
     padding: 6px 20px;
-    font-size: 14px;
-    letter-spacing: 1px;
+    font-size: 13px;
+    letter-spacing: 0.5px;
     color: #666;
     background: #efefef;
     left: 0;
