--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -6,7 +6,7 @@
 p, a, h1, h2, h3, h4 {
     font-family: "lato", sans-serif;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 200;
+    font-weight: 300;
     color: white;
     letter-spacing: .1em;
     -webkit-font-smoothing: subpixel-antialiased;
@@ -80,7 +80,6 @@ h2.widetext { margin-top: 12px; }
     display: none;
     width: 100%;
     box-sizing: border-box;
-    font-weight: 300;
     padding: 6px 20px;
     font-size: 13px;
     letter-spacing: 0.5px;
@@ -95,6 +94,7 @@ h2.widetext { margin-top: 12px; }
     display: inline-block;
     text-align: center;
     text-decoration: underline;
+    color: #333;
     margin: 0px;
     cursor: help;
 }
