--- a/css/kina-white.css
+++ b/css/kina-white.css
@@ -62,6 +62,8 @@ h2.widetext { margin-top: 12px; }
     border-bottom: 1px solid #eaeaea;
 }
 
+/* Cookie overlay stuff */
+
 .cookiesrow {
     z-index: 1000;
     display: block;
@@ -78,9 +80,28 @@ h2.widetext { margin-top: 12px; }
     opacity: 0.85;
     border-top: 1px solid #000;
 }
-.cookiesrow a {
-    color: white; text-decoration: underline;
+.cookiesrow .cookielink {
+    display: inline-block;
+    text-align: center;
+    text-decoration: underline;
+    color: white;
+    margin: 0px;
+    cursor: help;
 }
+.cookiesrow .cookiebutton {
+    background: transparent;
+    color: white;
+    display: inline-block;
+    font-size: 11px;
+    font-weight: normal;
+    text-align: center;
+    text-transform: uppercase;
+    border: white solid 1px;
+    padding: 4px 10px 2px 10px;
+    margin: 1px 10px;
+    cursor: pointer;
+}
+/* END: Cookie overlay stuff */
 
 .saletext {
     letter-spacing: 1px;
@@ -223,7 +244,7 @@ img.img-block {
     z-index: 999;
 }
 
-.mobilemenuicon {
+.menuicon {
 	position: absolute;
     left: 10px;
     top: 39px;
