--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -129,8 +129,8 @@ h2.widetext { margin-top: 12px; }
     text-align: center;
     text-transform: uppercase;
     font-size: 24px;
-    border-top: 1px solid #dfdfdf;
-    border-bottom: 1px solid #dfdfdf;
+    border-top: 1px solid #999;
+    /*border-bottom: 1px solid #dfdfdf;*/
     padding: 20px 0;
 }
 .headline span::before, .headline span::after {
@@ -234,7 +234,7 @@ img.img-block {
     min-width: 320px;
 }
 
-.mainnav-wrapper { border-bottom: 1px solid #f0f0f0; }
+.mainnav-wrapper { border-bottom: 1px solid #999; }
 
 .mainnav {
     /* text-align: left; */
