--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -13,9 +13,7 @@ p, a, h1, h2, h3, h4 {
 }
 
 h1, h2 {
-    font-family: "Didot W02 Roman","Didot", serif;
-    font-family: CormorantGaramond-Light,serif;
-    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
 }
 
 h4 {
@@ -51,7 +49,7 @@ h3 { font-size: 14px; }
 h4 { font-size: 14px; }
 
 .middletext { letter-spacing: 2px; }
-.widetext { letter-spacing: 4px; margin: 8px; }
+.widetext { letter-spacing: 6px; margin: 8px; }
 h2.widetext { margin-top: 12px; }
 
 .welcomerow {
@@ -247,14 +245,14 @@ img.img-block {
 
 .mainnav a {
     letter-spacing: 2px;
-    font-weight: 500;
+    font-weight: 200;
     margin-left: 6px;
     margin-right: 6px;
     padding:5px;
     padding-top: 6px;
     font-size: 16px;
     color: white;
-    font-family: 'Oswald', sans-serif;
+    /*font-family: 'Oswald', sans-serif;*/
 }
 
 .mainnav a:hover {
