--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -13,7 +13,7 @@ p, a, h1, h2, h3, h4 {
 }
 
 h1, h2 {
-    font-weight: 200;
+    font-weight: 300;
 }
 
 h4 {
@@ -22,7 +22,7 @@ h4 {
 
 p, a {
     font-size: 13px;
-    line-height: 19px;
+    line-height: 17px;
     letter-spacing: .8px;
     margin: 0;
 }
@@ -34,9 +34,9 @@ p.info {
     line-height: 17px;
     font-family: Arial,Helvetica,sans-serif; 
     color:#ccc;
-    max-width: 780px; 
+    max-width: 800px; 
     margin: auto; 
-    text-align: justify;
+    text-align: left;
 }
 
 a {
