--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -4,7 +4,6 @@
 .mobile, .mobile-inline { display:none; }
 
 p, a, h1, h2, h3, h4 {
-    font-family: "lato", sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     color: white;
@@ -13,12 +12,11 @@ p, a, h1, h2, h3, h4 {
 }
 
 h1, h2 {
-    letter-spacing: 1.5px;
+    font-family: 'Bellefair', serif;
 }
 
 h4 {
     color: #ccc;
-    font-style: italic;
 }
 
 p, a {
