--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -29,9 +29,9 @@ p, a {
 p { text-align: center; }
 
 p.info { 
-    font-size: 12px;
-    line-height: 16px;
-    font-family: Arial,Helvetica,sans-serif; 
+    font-size: 13px;
+    line-height: 19px;
+    font-weight: 300;
     color:#ccc;
     max-width: 800px; 
     margin: auto; 
@@ -49,7 +49,7 @@ h3 { font-size: 14px; }
 h4 { font-size: 14px; }
 
 .middletext { letter-spacing: 2px; }
-.widetext { letter-spacing: 6px; margin: 8px; }
+.widetext { letter-spacing: 7px; margin: 8px; }
 h2.widetext { margin-top: 12px; }
 
 .welcomerow {
