--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -506,9 +506,10 @@ body .instagram-element .instagram-photo:hover img {
         width: 15%;
         float: left;
     }
-    .menuicon img { width: 30px; }
+    .menuicon img { width: 30px; margin-top: 17px; }
 
     .logoicon {
+        margin-top: 3px;
         position: relative;
         text-align: center;
         width: 70%;
@@ -516,12 +517,13 @@ body .instagram-element .instagram-photo:hover img {
     }
 
     .contacticon {
+        margin-top: 3px;
         position: relative;
         text-align: center;
         width: 15%;
 
     }
-    .contacticon img { width: 28px; }
+    .contacticon img { width: 28px; margin-top: 17px; }
 
 /* END: mobile header elements */
 
@@ -676,13 +678,14 @@ body .instagram-element .instagram-photo:hover img {
 
 /* LOGOLINE */
 .logoline {
-    
+    display: block;
+    margin-top: 15px;
 }
 .logoline h2 {
-    margin: 10px;
+    margin: 3px;
     font-size: 22px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     color: white;
     letter-spacing: 10px;
     -webkit-font-smoothing: subpixel-antialiased;
@@ -691,7 +694,7 @@ body .instagram-element .instagram-photo:hover img {
     margin: 0px;
     font-size: 12px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     color: white;
     letter-spacing: 10px;
     -webkit-font-smoothing: subpixel-antialiased;
