--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -45,7 +45,12 @@ a {
 }
 
 .middletext { letter-spacing: 2px; }
-.widetext { letter-spacing: 7px; margin: 14px 0; }
+
+.widetext { 
+    letter-spacing: 7px; 
+    /*margin: 14px 0; */
+}
+
 h2.widetext { margin-top: 12px; }
 
 .welcomerow {
@@ -123,9 +128,9 @@ h2.widetext { margin-top: 12px; }
     text-align: center;
     text-transform: uppercase;
     font-size: 24px;
-    border-top: 1px solid #999;
+    padding: 20px 0 10px 0;
+    /*border-top: 1px solid #999;*/
     /*border-bottom: 1px solid #dfdfdf;*/
-    padding: 20px 0;
 }
 .headline span::before, .headline span::after {
     border-bottom: 1px solid #000000;
@@ -135,7 +140,7 @@ h2.widetext { margin-top: 12px; }
     width: 100%;
 }
 
-.blackbutton {
+.mainbutton {
     background: black;
     color: white;
     display: inline-block;
@@ -147,33 +152,14 @@ h2.widetext { margin-top: 12px; }
     vertical-align: middle;
     white-space: nowrap;
     text-decoration: none;
-    margin: 30px;
+    margin: 20px;
+    margin-bottom: 30px;
     border: white solid 1px;
 }
-.blackbutton:hover {
+.mainbutton:hover {
     background: white;
     color: black;
-}
-
-
-.whitebutton {
-    background: #ffffff;
-    color: black;
-    display: inline-block;
-    padding: 8px 28px 6px 28px;
-    font-size: 11px;
-    font-weight: normal;
-    text-align: center;
-    text-transform: uppercase;
-    vertical-align: middle;
-    white-space: nowrap;
-    text-decoration: none;
-    margin: 20px;
     border: black solid 1px;
-}
-.whitebutton:hover {
-    background: #000000;
-    color: #ffffff;
 }
 
 
@@ -289,11 +275,19 @@ img.img-block {
     color: white;
 }
 .bgwhite {
-    background-color: #fff;
+    background-color: white;
 }
 
 .bgblack {
-    background-color: #000;
+    background-color: black;
+}
+
+.bggrey {
+    background-color: #dfdfdf;
+}
+
+.bgnude {
+    background-color: #eecbc2;
 }
 
 .transp {
@@ -429,7 +423,7 @@ body .instagram-element .instagram-photo:hover img {
     .instagram-element .instagram-photo { width: 50%; }
 }
 @media (max-width: 600px) {
-    .instagram-element { margin: 1.2%; padding-top: 3%; }
+    .instagram-element { margin: 1.2%; padding-top: 0; }
     .instagram-element .instagram-photo { width: 97.6%; margin: 1.2%; }
 }
 
@@ -628,10 +622,6 @@ body .instagram-element .instagram-photo:hover img {
 .headline h4 {
     color: #111;
     padding: 15px 0 12px 0;
-
-    margin: 10px 0;
-    background-color: antiquewhite;
-    background-color: #eecbc2;
 }
 
 .whitebox h4 {
