--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -210,11 +210,11 @@ img.img-block {
 
 .mainnav a {
     letter-spacing: -0.5px;
-    font-weight: 400;
+    font-weight: 300;
     margin-left: 10px;
     margin-right: 10px;
-    padding:0 0px;
-    font-size: 15px;
+    padding: 5px 0px;
+    font-size: 14px;
     color: white;
     border-bottom: 1px solid transparent;
 }
@@ -430,7 +430,7 @@ body .instagram-element .instagram-photo:hover img {
 
 
 
-@media (max-width: 1080px) {
+@media (max-width: 1000px) {
 
     .desktop { display:none; }
     .desktop-inline { display:none; }
@@ -447,14 +447,14 @@ body .instagram-element .instagram-photo:hover img {
         padding: 0;
     }
 
-	.mainnav a {
+    .mainnav a {
         font-size: 16px;
         display: block;
         margin-top: 0px; /* FONT ISSUE */
         padding: 20px 5px;
-	    text-align: left;
-	    border-top: 1px solid #dedede;
-	}
+	text-align: left;
+	border-top: 1px solid #dedede;
+    }
 
 	.mainnav a.menuitem:hover {
         color: #dfdfdf;
