--- a/css/kinastudio.css
+++ b/css/kinastudio.css
@@ -4,6 +4,7 @@
 .mobile, .mobile-inline { display:none; }
 
 p, a, h1, h2, h3, h4 {
+    font-family: 'Oswald', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     color: white;
@@ -179,16 +180,16 @@ h2.widetext { margin-top: 12px; }
 
 img.logo {
     width: 100%;
-    max-width: 180px;
+    max-width: 110px;
     margin-top: 20px;
     margin-bottom: 0;
 }
 
 img.menulogo {
-    margin-top: 7px;
+    margin-top: 10px;
     margin-right: 40px;
     margin-left: 0px;
-    margin-bottom: -12px;
+    margin-bottom: -11px;
 }
 
 img.img-block {
@@ -502,9 +503,9 @@ body .instagram-element .instagram-photo:hover img {
 
     img.logo {
         width: 100%;
-        max-width: 160px;
-        margin-top: 0px;
-        margin-bottom: 19px;
+        max-width: 100px;
+        margin-top: 2px;
+        margin-bottom: 21px;
     }
 
     .contacticon {
